MDEV-19429: Wrong query result with EXISTS and LIMIT 0

Check EXISTS LIMIT before rewriting.